[fix] fixed typos in notebook

--- a/notebooks/QUTIP_susy_matrices.ipynb
+++ b/notebooks/QUTIP_susy_matrices.ipynb
@@ -3,9 +3,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "# SU(2) mini-BMN Hamiltonian\n",
+    "# SU(2) minimal BMN Hamiltonian\n",
     "\n",
-    "The following cell defines a function which creates the bosons, then it creates the SU(2) mini-BMN Hamiltonian. \n",
+    "The following cell defines a function which creates the bosons, then it creates the SU(2) minimal BMN Hamiltonian. \n",
     "The function receives the number of bosons ($n_b$), the number of fermions ($n_f$), and the size of the bosons ($n$) as arguments.\n",
     "For example, for 6 bosons that are $2 \\times 2$ and 3 fermions, the function call would look like `bosonHamiltonians(6, 3, 8)`.\n",
     "The function returns four Hamiltonians."
@@ -709,7 +709,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## The full mini-BMN hamiltonian"
+    "## The full minimal BMN hamiltonian"
    ],
    "metadata": {}
   },
